Edit Profile Fixes and Image Glitches

--- a/UniMeet/public/edit_profile.html
+++ b/UniMeet/public/edit_profile.html
@@ -39,6 +39,9 @@
   <div id="blockMenuItem" class="sideButton">
     <div class="sideText">Block List</div>
     <img class="sideIndicator" src="images/discind.png"> </div>
+	<div id="signOutMenuItem" class="sideButton">
+    <div class="sideText">Sign Out</div>
+	</div>
 </div>
 <div class="mainView">
 	  
@@ -46,7 +49,7 @@
     <div class="backgroundColorView"></div>
     <div class="shortcut_container">
     </div>
-    <div class="avatar"> <img id="profilePicture" class="profilePicture"> </div>
+    <div id="avatar" class="avatar"> </div>
   </div>
 	
 	<div id="editProfileView" class="editProfileView">
