--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -46,7 +46,7 @@
       <button id="blockBtn" class=" button shortcut_buttons">Block</button>
       <!-- <button class="button shortcut_buttons">More</button>-->
     </div>
-    <div class="avatar"> <img id="profilePicture" class="profilePicture" src="images/profile_placeholder.png"> </div>
+    <div id="avatar" class="avatar"></div>
   </div>
   <div class="mainView">
     <section class="bioView">
