--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -33,7 +33,7 @@
       <a href="/messaging.html">Messages</a>
       <a href="/edit_profile.html"><img id="profileIcon" class="nav_profile_image" src="images/profile_placeholder.png"></a>
       <!-- Bringing this back for testing -->
-      <a href="" id="logoutBtn" onclick="logOut()">Log Out</a>
+<!--      <a href="" id="logoutBtn" onclick="logOut()">Log Out</a>-->
       <!-- Bringing this back for testing -->
     </div>
   </nav>
