--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -40,7 +40,7 @@
   <div class="user_profile_main">
     <div class="backgroundColorView"></div>
     <div class="shortcut_container">
-      <button id="messageBtn" class=" button shortcut_buttons">Message</button>
+      <button id="messageBtn" class=" button shortcut_buttons" style="display: none;">Message</button>
       <button id="friendBtn" class=" button shortcut_buttons">Add Friend</button>
       <button id="rejBtn" class=" button shortcut_buttons" style="display: none;">Reject Request</button>
       <button id="blockBtn" class=" button shortcut_buttons">Block</button>
