--- a/UniMeet/public/testing.html
+++ b/UniMeet/public/testing.html
@@ -45,7 +45,8 @@
                                 <div id="item-1-1" class="tab-pane fade show active" role="tabpanel" aria-labelledby="item-1-1-tab">
                                     <h4>Test Functions</h4>
                                     <section class="_add-task-form">
-                                        <div class="form-group"><button class="btn btn-success" type="button" id="addUsersButton">Create Test Accounts (1-100) </button></div>
+                                        <div class="form-group"><button class="btn btn-success" type="button" id="addUsersButton">Create Test Accounts (1-1000) </button></div>
+                                        <div class="form-group"><button class="btn btn-success" type="button" id="updateUsersButton">Update Profiles with test data </button></div>
                                     </section>
                                 </div>
             </div>
