--- a/UniMeet/public/messaging.html
+++ b/UniMeet/public/messaging.html
@@ -42,7 +42,7 @@
   <div style="height: 64px"></div>
   <div class="mainView">
     <div id="userBarButtons" class="userBar">
-      <button id="refreshButton" type="submit"> Refresh </button>
+      <button id="refreshButton" class="refreshButton button whiteBackground" type="submit">↻</button>
       <!--   <button id="newConversation" class="Conversation" type="submit">New Conversation</button>    -->
       <div id="userBar"></div>
     </div>
